created a new readme file

--- a/html/index.html
+++ b/html/index.html
@@ -21,7 +21,7 @@
     excerpts in the feed with the extracted article.</p>
   <p>Append the feed url like this:</p>
 
-  <blockquote>http://&host;:&port;/http://example.com/news.rss</blockquote>
+  <blockquote>http://&host;/http://example.com/news.rss</blockquote>
 
 </body>
 </html>
