fix small bug in html template

--- a/html/index.html
+++ b/html/index.html
@@ -101,7 +101,7 @@
     The original feed will be extended with the full-text of the articles and 
     send to the user (the feed reader software). Feedability also supports 
     filters based on <a href="http://jquery.com/">jquery</a>
-    <a href="http://api.jquery.com/category/selectors/">selectors</a>.
+    <a href="http://api.jquery.com/category/selectors/">selectors</a>.</p>
 
     <h2>Try Feedability</h2>
 
