moved proxy code in a new class, got rid of tpl

--- a/static/error.html
+++ b/static/error.html
@@ -17,7 +17,7 @@
 
   <p>Feedability was unable to proceed, an error occured:</p>
 
-  <blockquote>&message;</blockquote>
+  <blockquote>{message}</blockquote>
 
 </body>
 </html>
