external css, redesign and preserve order checkbox

--- a/static/error.html
+++ b/static/error.html
@@ -2,22 +2,21 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 <head>
-  <title>Feedability</title>
-  <style type="text/css">
-  <!--
-    h1 {
+  <title>Feedability: An Error Occurred</title>
 
-    }
-  -->
-  </style>
+  <link href="/style.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
 
-  <h1>An Error Occured</h1>
+  <section>
 
-  <p>Feedability was unable to proceed, an error occured:</p>
+    <h1>An Error Occurred</h1>
 
-  <blockquote>{message}</blockquote>
+    <h2>Feedability was unable to proceed,</h2>
+
+    <blockquote>{message}</blockquote>
+
+  </section>
 
 </body>
 </html>
