--- a/static/index.html
+++ b/static/index.html
@@ -3,77 +3,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 <head>
   <title>Feedability</title>
-  <style type="text/css">
-  <!--
-    body {
-      font: 13.34px helvetica,arial,freesans,clean,sans-serif;
-    }
 
-    section {
-      display: block;
-      width: 740px;
-      margin: 40px auto;
-      padding: 15px;
-    }
-
-    h1 {
-      font-size: 33px;
-      margin-top: 0px;
-    }
-
-    h2 {
-      border-top: 4px solid #E0E0E0 !important;
-      font-size: 150% !important;
-      margin-top: 1.5em !important;
-      padding-top: 0.5em !important;
-    }
-
-    a {
-      color: #4183C4;
-      text-decoration: none;
-    }
-    a:hover {
-      text-decoration: underline;
-    }
-
-    code {
-      font: 12px Monaco,"Courier New","DejaVu Sans Mono","Bitstream Vera Sans Mono",monospace;
-      background-color: #F8F8FF;
-      border: 1px solid #DEDEDE;
-      color: #444444;
-      padding: 0 0.2em;
-    }
-
-    form {
-      margin-top: 25px;
-      margin-left: 40px;
-    }
-
-    input {
-      border: 1px solid #CCC;
-      color: #666666;
-      font-size: 11px;
-      padding: 7px;
-      height: 28px !important;
-      border-spacing: 0px;
-      margin: 0px;
-      padding: 0px;
-      space: 0px;
-      line-height:normal !important;
-    }
-
-    input[type="text"] {
-      font: 12px Arial;
-      width: 450px;
-    }
-
-    input[type="submit"] {
-      line-height:normal !important;
-      height: 29px !important;
-      width: 150px;
-    }
-  -->
-  </style>
+  <link href="/style.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
 
@@ -106,8 +37,13 @@
     <h2>Try Feedability</h2>
 
     <form method="GET" action="/">
-      <input type="text" name="u" id="url" onfocus="setvalue(false);" onblur="setvalue(true);" value="Feed URL, RSS1.0, RSS2.0 or Atom" />
-      <input type="submit" value="Feedability!" />
+      <div id="search_form">
+        <input type="text" name="u" id="url" onfocus="setvalue(false);" onblur="setvalue(true);" value="Feed URL, RSS1.0, RSS2.0 or Atom" />
+        <input type="submit" value="Feedability!" />
+      </div>
+      <div id="search_options">
+        <input type="checkbox" name="preserve_order" value="true" checked="checked" /> <strong>preserve order of feed</strong> (important if your feedreader does not sort the entries)
+      </div>
     </form>
 
   </section>
@@ -120,7 +56,7 @@
       var u = document.getElementById("url");
       if(getinput().value != "" && getinput().value != value) return;
       getinput().value = (view)? value : '';
-    } 
+    }
   //]]>
   </script>
 
