insert domain logging

--- a/static/index.html
+++ b/static/index.html
@@ -20,9 +20,7 @@
     <a href="https://github.com/4poc/feedability/wiki">wiki</a>.</p>
 
     <p>Feedability is written in javascript using the 
-    <a href="http://code.google.com/p/v8/">v8 engine</a> and Node.js, it 
-    requires the <a href="https://github.com/arrix/node-readability">node-readability</a>
-    and <a href="https://github.com/astro/node-expat">node-expat</a> libraries.
+    <a href="http://code.google.com/p/v8/">v8 engine</a> and Node.js.
     It implements a small HTTP server, you sent the feed you want to read just 
     as a query string or parameter, so for instance: 
     <code>http://{host}/http://example.com/atom.xml</code> The node.js 
